Fix tiered pricing images and add overstock view
